--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -20,6 +20,8 @@
     display: flex;
     width: 100%;
     justify-content: space-between;
+    color: blue;
+    font-weight: 700;
   }
 
   &-logo-svg-1 {
