--- a/src/components/registration/registration.scss
+++ b/src/components/registration/registration.scss
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  height: 910px;
+  //height: 910px;
   background-color: #fff;
   text-align: center;
   align-items: center;
