--- a/src/components/relationships/relationships.scss
+++ b/src/components/relationships/relationships.scss
@@ -25,12 +25,13 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  height: 860px;
+  //height: 860px;
   text-align: center;
   background-color: #fff;
+  // border: 1px solid black;
 
   @include for-medium-up {
-    height: 656px;
+    //height: 656px;
 
     &__float_svg{
       display: flex;
