--- a/src/components/about/about.scss
+++ b/src/components/about/about.scss
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  height: 440px;
+  min-height: 440px;
   padding-top: 40px;
  
   @include for-medium-up {
