--- a/src/components/about/about.scss
+++ b/src/components/about/about.scss
@@ -113,7 +113,7 @@
   &__btn {
     width: 58.3%;
     height: 37px;
-    color: #f8f8f8;
+    color: #fff;
     border-radius: 4px;
     border: none;
     margin-top: 24px;
@@ -136,7 +136,12 @@
       margin-left: 30px;
      }
   }
+
+    &__a {
+      color: #fff;
+    }
 }
+
 
 .about__a:visited {
   color: #fff;
